style: try to fix weird chrome bug
of not showing grid at full height

--- a/themes/delphi/assets/css/pages/_covidcast.scss
+++ b/themes/delphi/assets/css/pages/_covidcast.scss
@@ -5,7 +5,7 @@
 .covidcast_wrapper {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
 
   > footer {
     display: none;
